[add] friend機能
