# backend/src/Users/users.controller.ts
@@ -1,6 +1,7 @@
-import { Body, Controller, Get, Param, Post } from '@nestjs/common';
+import { Body, Controller, Get, Logger, Param, Post } from '@nestjs/common';
 import { UsersService } from './users.service';
 import {
+  FriendRequestDto,
   UserCreateReqDto,
   UserCreateResDto,
   UserGetDto,
@@ -17,6 +18,23 @@ export class UsersController {
 
   @Get(':id')
   getUserById(@Param('id') param: string): Promise<UserGetDto> {
-    return this.service.getById(param);
+    return this.service.getUserById(Number(param));
+  }
+
+  @Post('friends')
+  requsetFriend(@Body() body: FriendRequestDto) {
+    this.service.requestFriendship(body);
+  }
+
+  @Get('friends/:id')
+  getFriendsById(@Param('id') param: string): Promise<UserGetDto[]> {
+    return this.service.getFriendsById(Number(param));
+  }
+
+  @Get('friends/pending/:id')
+  getPendingFriends(@Param('id') param: string): Promise<UserGetDto[]> {
+    Logger.log(param);
+    const list = this.service.getPendingFriends(Number(param));
+    return list;
   }
 }
